# cocotbext-obi

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: build_icarus.yml  build_verilator.yml  integration_test.yml  lint.yml  pypi_release.yml  setup_icarus.yml  setup_verilator.yml  test_checkin.yml
cocotbext/obi/: __init__.py  obi_base.py  obi_bus.py  obi_master.py  obi_monitor.py  obi_ram.py  obi_slave.py  utils.py
tests/: regblock.mak
tests/interfaces/: clkrst.py
tests/test_basic/: Makefile  regblock.sv  test_dut.py
tests/test_basic_64/: Makefile  regblock.sv  test_dut.py
tests/test_slave/: Makefile  obi_top.sv  test_dut.py
tests/test_slverr/: Makefile  regblock.rdl  regblock.sv  test_dut.py
