# package information
[metadata]
name = cocotbext_obi
version = attr: cocotbext.obi.version.__version__
description = OBI (Open Bus Interface) modules for cocotb
keywords = obi, cocotb, openhw, risc-v
author = Dave Keeshan
author_email = dave.keeshan@daxzio.com
license = MIT
url = https://github.com/daxzio/cocotbext-obi
project_urls =
    Bug Tracker = https://github.com/daxzio/cocotbext-obi/issues
    Source Code = https://github.com/daxzio/cocotbext-obi
download_url = https://github.com/daxzio/cocotbext-obi/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    cocotb>=1.9.0

[options.extras_require]
test =
    pytest
    pytest-xdist

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib

